--- a/style/style.css
+++ b/style/style.css
@@ -597,7 +597,7 @@ ul{
 
 /* MOBILE */
 
-@media (max-width: 375px) {
+@media (min-device-width : 320px) and (max-device-width : 480px) {
     .container {
         max-width: 320px;
         margin: 0 auto;
